# neuro-symbolic-concept-learner

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  RESULTS.md  demo_working_pipeline.py  pyproject.toml  requirements.txt  test_complete_pipeline.py  test_logic_engine.py  test_question_parser.py  test_scene_graph.py
docs/: reasoning_examples.md
examples/: sample_scene.json
src/: __init__.py  demo.py  evaluate.py
src/concepts/: __init__.py  concept_learner.py
src/language/: __init__.py  parser.py  question_parser.py
src/reasoning/: __init__.py  executor.py  logic_engine.py  operations.py
src/representation/: __init__.py  scene_graph.py
src/scene/: __init__.py  objects.py  scene_graph.py
src/vision/: __init__.py  visual_processor.py
tests/: test_executor.py  test_parser.py
